# lakeshore350-python

./: GL7_MODULAR_README.md  GL7_manual.txt  README.md  gui_main.py  lakeshore350_simple.py  plot_temperature.py  pyproject.toml  record_temps.py
calibration/: 4_head_cal.csv  pumps_switches_cal.csv
examples/: quickstart.py  show_temps.py
gl7_calibrations/: 3_head_cal.csv  film_burner_cal.csv
lakeshore350/: __init__.py  driver.py  emergency_heater_stop.py  exceptions.py  gl7_control.py  head3_calibration.py  head4_calibration.py  heaters.py  idn.py  lakeshore_display.py  main.py  outputs.py  panel_display.py  pump_calibration.py  pumps_calibration.py  query_heaters.py  read_temps.py  serial_test.py  set_heater.py  switches.py  temperature.py
lakeshore350/gl7/: GL7_MODULAR_README.md  __init__.py  step1_initial_status.py  step2a_precooling.py  step2b_heat_switch_verification.py  step3_pump_heating.py  step4_4he_pump_transition.py  step5_3he_pump_transition.py  step6_final_cooldown.py  step7_final_status.py
lakeshore350/gl7/test_sequence/: __init__.py  step1_initial_status_test.py  step2a_precooling_test.py  step2b_heat_switch_verification_test.py  step3_pump_heating_test.py  step4_4he_pump_transition_test.py  step5_3he_pump_transition_test.py  step6_final_cooldown_test.py
manuals/: 350_manual.txt
