[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeshore350"
version = "0.2.0"
description = "Simple Python interface for Lake Shore 350 Temperature Controller"
authors = [
    { name = "Nikki Zivkov", email = "nzivkov@ucsb.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyserial"
    , "PyQt5 >= 5.15"
]

[project.urls]
Homepage = "https://github.com/MazinLab/lakeshore350-python"

[project.scripts]
lakeshore350 = "lakeshore350.main:main"

[tool.setuptools.packages.find]
where = ["."]